# pet_project

./: .gitignore  README.md  concert_app.rar  docker-compose.yaml  front.html  pyproject.toml  requirements.txt  run.py  testconnect.py
brokers/: publisher.py  subscriber.py
data/: CONCERT_DB.env  concerts.py  gen_rand_db.py  groups.py  hall_ticket_type.py  halls.py  init_db.py  sales.py  tickets.py  tickets_type.py  users.py
migrations/: 001_init.sql  add_concert_frontend_columns.sql
models/: db_models.py  other_models.py
service/: auth.py  common_params.py  fs_broker.py  log.py
service/fs_subs/: app.py  user_sub.py
src/ticketshop/: main.py
src/ticketshop/api/: deps.py
src/ticketshop/api/v1/: admin.py  auth.py  concerts.py  groups.py  halls.py  router.py  sales.py  tickettype.py  watchlist.py
src/ticketshop/core/: broker.py  config.py  security.py
src/ticketshop/db/: base.py  session.py
src/ticketshop/domain/concerts/: models.py  repo.py  schemas.py
src/ticketshop/domain/groups/: models.py  repo.py  schemas.py
src/ticketshop/domain/hall_zone/: models.py  repo.py  schemas.py
src/ticketshop/domain/halls/: models.py  repo.py  schemas.py
src/ticketshop/domain/sales/: models.py  repo.py  schemas.py
static/: index.html
static/css/: style.css
static/js/: api.js  app.js
tests/unit/: test_web.py
tests/unit/service/: test_concerts.py
tests/unit/web/: load_testing.py  test_concerts.py
web/: auth.env  auth.py  concerts.py  groups.py  halls.py  main.py  pass.txt  sales.py  tickets.py  tickettype.py  user_functions.py
(+16 files in other folders)
